--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <footer>
         <p>&copy; 2025 JavaScript Learning</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
